update API get Hardware by manufactuer name